# fastapi-gzip-demo

./: README.md  app_gzip.py  app_non_gzip.py  pyproject.toml
